// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwotNotes unit test Mounting, testing user input, and dismounting the component. 1`] = `
<SwotNotes
  find={[MockFunction]}
  id="find"
  props="props"
>
  <Form
    as="form"
  >
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <Header
        as="h3"
        style={
          Object {
            "padding": "10px",
          }
        }
      >
        <h3
          className="ui header"
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          Notes
        </h3>
      </Header>
      <TextArea
        as="textarea"
        onChange={[Function]}
        placeholder="Notes..."
        rows={3}
      >
        <Ref
          innerRef={
            Object {
              "current": <textarea
                placeholder="Notes..."
                rows="3"
              />,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <textarea
                  placeholder="Notes..."
                  rows="3"
                />,
              }
            }
          >
            <textarea
              onChange={[Function]}
              onInput={[Function]}
              placeholder="Notes..."
              rows={3}
            />
          </RefFindNode>
        </Ref>
      </TextArea>
    </form>
  </Form>
</SwotNotes>
`;

exports[`SwotNotes unit test Rendering component with props that match the original component. 1`] = `
<form
  class="ui form"
>
  <h3
    class="ui header"
    style="padding:10px"
  >
    Notes
  </h3>
  <textarea
    placeholder="Notes..."
    rows="3"
  />
</form>
`;

exports[`SwotNotes unit test Rendering component without props. 1`] = `
<Fragment>
  <Form
    as="form"
  >
    <Header
      as="h3"
      style={
        Object {
          "padding": "10px",
        }
      }
    >
      Notes
    </Header>
    <TextArea
      as="textarea"
      onChange={[Function]}
      placeholder="Notes..."
      rows={3}
    />
  </Form>
</Fragment>
`;
